; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/lua/src/extr_lparser.c_forbody.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/lua/src/extr_lparser.c_forbody.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@TK_DO = common dso_local global i32 0, align 4
@OP_FORPREP = common dso_local global i32 0, align 4
@NO_JUMP = common dso_local global i32 0, align 4
@OP_FORLOOP = common dso_local global i32 0, align 4
@OP_TFORLOOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32, i32, i32, i32)* @forbody to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @forbody(%struct.TYPE_6__* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %12, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %19 = call i32 @adjustlocalvars(%struct.TYPE_6__* %18, i32 3)
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %21 = load i32, i32* @TK_DO, align 4
  %22 = call i32 @checknext(%struct.TYPE_6__* %20, i32 %21)
  %23 = load i32, i32* %10, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %5
  %26 = load i32*, i32** %12, align 8
  %27 = load i32, i32* @OP_FORPREP, align 4
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* @NO_JUMP, align 4
  %30 = call i32 @luaK_codeAsBx(i32* %26, i32 %27, i32 %28, i32 %29)
  br label %34

31:                                               ; preds = %5
  %32 = load i32*, i32** %12, align 8
  %33 = call i32 @luaK_jump(i32* %32)
  br label %34

34:                                               ; preds = %31, %25
  %35 = phi i32 [ %30, %25 ], [ %33, %31 ]
  store i32 %35, i32* %13, align 4
  %36 = load i32*, i32** %12, align 8
  %37 = call i32 @enterblock(i32* %36, i32* %11, i32 0)
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @adjustlocalvars(%struct.TYPE_6__* %38, i32 %39)
  %41 = load i32*, i32** %12, align 8
  %42 = load i32, i32* %9, align 4
  %43 = call i32 @luaK_reserveregs(i32* %41, i32 %42)
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %45 = call i32 @block(%struct.TYPE_6__* %44)
  %46 = load i32*, i32** %12, align 8
  %47 = call i32 @leaveblock(i32* %46)
  %48 = load i32*, i32** %12, align 8
  %49 = load i32, i32* %13, align 4
  %50 = call i32 @luaK_patchtohere(i32* %48, i32 %49)
  %51 = load i32, i32* %10, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %59

53:                                               ; preds = %34
  %54 = load i32*, i32** %12, align 8
  %55 = load i32, i32* @OP_FORLOOP, align 4
  %56 = load i32, i32* %7, align 4
  %57 = load i32, i32* @NO_JUMP, align 4
  %58 = call i32 @luaK_codeAsBx(i32* %54, i32 %55, i32 %56, i32 %57)
  br label %65

59:                                               ; preds = %34
  %60 = load i32*, i32** %12, align 8
  %61 = load i32, i32* @OP_TFORLOOP, align 4
  %62 = load i32, i32* %7, align 4
  %63 = load i32, i32* %9, align 4
  %64 = call i32 @luaK_codeABC(i32* %60, i32 %61, i32 %62, i32 0, i32 %63)
  br label %65

65:                                               ; preds = %59, %53
  %66 = phi i32 [ %58, %53 ], [ %64, %59 ]
  store i32 %66, i32* %14, align 4
  %67 = load i32*, i32** %12, align 8
  %68 = load i32, i32* %8, align 4
  %69 = call i32 @luaK_fixline(i32* %67, i32 %68)
  %70 = load i32*, i32** %12, align 8
  %71 = load i32, i32* %10, align 4
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %73, label %75

73:                                               ; preds = %65
  %74 = load i32, i32* %14, align 4
  br label %78

75:                                               ; preds = %65
  %76 = load i32*, i32** %12, align 8
  %77 = call i32 @luaK_jump(i32* %76)
  br label %78

78:                                               ; preds = %75, %73
  %79 = phi i32 [ %74, %73 ], [ %77, %75 ]
  %80 = load i32, i32* %13, align 4
  %81 = add nsw i32 %80, 1
  %82 = call i32 @luaK_patchlist(i32* %70, i32 %79, i32 %81)
  ret void
}

declare dso_local i32 @adjustlocalvars(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @checknext(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @luaK_codeAsBx(i32*, i32, i32, i32) #1

declare dso_local i32 @luaK_jump(i32*) #1

declare dso_local i32 @enterblock(i32*, i32*, i32) #1

declare dso_local i32 @luaK_reserveregs(i32*, i32) #1

declare dso_local i32 @block(%struct.TYPE_6__*) #1

declare dso_local i32 @leaveblock(i32*) #1

declare dso_local i32 @luaK_patchtohere(i32*, i32) #1

declare dso_local i32 @luaK_codeABC(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @luaK_fixline(i32*, i32) #1

declare dso_local i32 @luaK_patchlist(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
